--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,2 @@
-# 核心依赖 - 项目实际使用的库
-# Web抓取和HTTP请求
-requests==2.32.4
-beautifulsoup4==4.13.4
-
-# 代理和网络拦截
-mitmproxy==12.1.1
-
-# 数据库连接
-PyMySQL==1.1.1
-
-# GUI自动化
-PyAutoGUI==0.9.54
-pynput==1.8.1
-
-# 基础依赖（通常由上述库自动安装，但明确列出以确保兼容性）
-certifi==2025.7.14
-charset-normalizer==3.4.2
-idna==3.10
-urllib3==2.5.0
-soupsieve==2.7
-
-# mitmproxy相关依赖
-cryptography==44.0.3
-blinker==1.9.0
-click==8.2.1
-h11==0.16.0
-h2==4.1.0
-hyperframe==6.1.0
-kaitaistruct==0.10
-passlib==1.7.4
-protobuf==6.31.1
-publicsuffix2==2.20191221
-pyasn1==0.6.1
-ruamel.yaml==0.18.10
-tornado==6.5
-urwid==2.6.16
-Werkzeug==3.1.3
-zstandard==0.23.0
-
-# PyAutoGUI相关依赖
-pillow==11.3.0
-PyGetWindow==0.0.9
-PyMsgBox==1.0.9
-pyperclip==1.9.0
-PyRect==0.2.0
-PyScreeze==1.0.1
-pytweening==1.2.0
-MouseInfo==0.1.3
-
-# macOS特定依赖（仅在macOS上需要，用于pynput）
+pymysql
+python-dotenv
