--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,330 @@
-pymysql
-python-dotenv
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aioquic==1.2.0
+aiosignal==1.4.0
+annotated-types==0.7.0
+antlr4-python3-runtime==4.9.3
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+asgiref==3.8.1
+attrs==25.3.0
+beautifulsoup4==4.13.4
+behave==1.2.6
+blinker==1.9.0
+brotli==1.1.0
+certifi==2025.7.14
+cffi==1.17.1
+chardet==5.2.0
+charset-normalizer==3.4.2
+click==8.2.1
+cnocr==2.3.2.1
+cnstd==1.2.6.1
+colorama==0.4.6
+coloredlogs==15.0.1
+colorlog==6.9.0
+contourpy==1.3.3
+cryptography==44.0.3
+cssselect==1.3.0
+cycler==0.12.1
+exceptiongroup==1.3.0
+execnet==2.1.1
+fasteners==0.19
+filelock==3.18.0
+flask==3.1.0
+flatbuffers==25.2.10
+fonttools==4.59.0
+frozenlist==1.7.0
+fsspec==2025.7.0
+gitdb==4.0.12
+gitpython==3.1.45
+greenlet==3.2.3
+h11==0.16.0
+h2==4.1.0
+hf-xet==1.1.5
+hpack==4.1.0
+huggingface-hub==0.34.3
+humanfriendly==10.0
+hyperframe==6.1.0
+idna==3.10
+iniconfig==2.1.0
+itsdangerous==2.2.0
+jinja2==3.1.6
+kaitaistruct==0.10
+keyboard==0.13.5
+kiwisolver==1.4.8
+ldap3==2.9.1
+lightning-utilities==0.15.0
+markdown-it-py==3.0.0
+markupsafe==3.0.2
+matplotlib==3.10.3
+mdurl==0.1.2
+mitmproxy==12.1.1
+mitmproxy-macos==0.12.7
+mitmproxy-rs==0.12.7
+mouseinfo==0.1.3
+mpmath==1.3.0
+msgpack==1.1.0
+multidict==6.6.3
+mycdp==1.2.0
+networkx==3.5
+numpy==2.2.6
+omegaconf==2.3.0
+onnx==1.18.0
+onnxruntime==1.22.1
+opencv-python==4.12.0.88
+outcome==1.3.0.post0
+packaging==25.0
+pandas==2.3.1
+parameterized==0.9.0
+parse==1.20.2
+parse-type==0.6.4
+passlib==1.7.4
+pdbp==1.7.1
+pillow==11.3.0
+pip==25.1.1
+platformdirs==4.3.8
+playwright==1.53.0
+pluggy==1.6.0
+propcache==0.3.2
+protobuf==6.31.1
+psutil==7.0.0
+publicsuffix2==2.20191221
+py-cpuinfo==9.0.0
+pyasn1==0.6.1
+pyasn1-modules==0.4.2
+pyautogui==0.9.54
+pyclipper==1.3.0.post6
+pycparser==2.22
+pydantic==2.11.7
+pydantic-core==2.33.2
+pyee==13.0.0
+pygetwindow==0.0.9
+pygments==2.19.2
+pylsqpack==0.3.22
+pymsgbox==1.0.9
+pymysql==1.1.1
+pynose==1.5.4
+pynput==1.8.1
+pyobjc==11.1
+pyobjc-core==11.1
+pyobjc-framework-accessibility==11.1
+pyobjc-framework-accounts==11.1
+pyobjc-framework-addressbook==11.1
+pyobjc-framework-adservices==11.1
+pyobjc-framework-adsupport==11.1
+pyobjc-framework-applescriptkit==11.1
+pyobjc-framework-applescriptobjc==11.1
+pyobjc-framework-applicationservices==11.1
+pyobjc-framework-apptrackingtransparency==11.1
+pyobjc-framework-audiovideobridging==11.1
+pyobjc-framework-authenticationservices==11.1
+pyobjc-framework-automaticassessmentconfiguration==11.1
+pyobjc-framework-automator==11.1
+pyobjc-framework-avfoundation==11.1
+pyobjc-framework-avkit==11.1
+pyobjc-framework-avrouting==11.1
+pyobjc-framework-backgroundassets==11.1
+pyobjc-framework-browserenginekit==11.1
+pyobjc-framework-businesschat==11.1
+pyobjc-framework-calendarstore==11.1
+pyobjc-framework-callkit==11.1
+pyobjc-framework-carbon==11.1
+pyobjc-framework-cfnetwork==11.1
+pyobjc-framework-cinematic==11.1
+pyobjc-framework-classkit==11.1
+pyobjc-framework-cloudkit==11.1
+pyobjc-framework-cocoa==11.1
+pyobjc-framework-collaboration==11.1
+pyobjc-framework-colorsync==11.1
+pyobjc-framework-contacts==11.1
+pyobjc-framework-contactsui==11.1
+pyobjc-framework-coreaudio==11.1
+pyobjc-framework-coreaudiokit==11.1
+pyobjc-framework-corebluetooth==11.1
+pyobjc-framework-coredata==11.1
+pyobjc-framework-corehaptics==11.1
+pyobjc-framework-corelocation==11.1
+pyobjc-framework-coremedia==11.1
+pyobjc-framework-coremediaio==11.1
+pyobjc-framework-coremidi==11.1
+pyobjc-framework-coreml==11.1
+pyobjc-framework-coremotion==11.1
+pyobjc-framework-coreservices==11.1
+pyobjc-framework-corespotlight==11.1
+pyobjc-framework-coretext==11.1
+pyobjc-framework-corewlan==11.1
+pyobjc-framework-cryptotokenkit==11.1
+pyobjc-framework-datadetection==11.1
+pyobjc-framework-devicecheck==11.1
+pyobjc-framework-devicediscoveryextension==11.1
+pyobjc-framework-dictionaryservices==11.1
+pyobjc-framework-discrecording==11.1
+pyobjc-framework-discrecordingui==11.1
+pyobjc-framework-diskarbitration==11.1
+pyobjc-framework-dvdplayback==11.1
+pyobjc-framework-eventkit==11.1
+pyobjc-framework-exceptionhandling==11.1
+pyobjc-framework-executionpolicy==11.1
+pyobjc-framework-extensionkit==11.1
+pyobjc-framework-externalaccessory==11.1
+pyobjc-framework-fileprovider==11.1
+pyobjc-framework-fileproviderui==11.1
+pyobjc-framework-findersync==11.1
+pyobjc-framework-fsevents==11.1
+pyobjc-framework-gamecenter==11.1
+pyobjc-framework-gamecontroller==11.1
+pyobjc-framework-gamekit==11.1
+pyobjc-framework-gameplaykit==11.1
+pyobjc-framework-healthkit==11.1
+pyobjc-framework-imagecapturecore==11.1
+pyobjc-framework-inputmethodkit==11.1
+pyobjc-framework-installerplugins==11.1
+pyobjc-framework-instantmessage==11.1
+pyobjc-framework-intents==11.1
+pyobjc-framework-intentsui==11.1
+pyobjc-framework-iobluetooth==11.1
+pyobjc-framework-iobluetoothui==11.1
+pyobjc-framework-iosurface==11.1
+pyobjc-framework-ituneslibrary==11.1
+pyobjc-framework-kernelmanagement==11.1
+pyobjc-framework-latentsemanticmapping==11.1
+pyobjc-framework-launchservices==11.1
+pyobjc-framework-libdispatch==11.1
+pyobjc-framework-libxpc==11.1
+pyobjc-framework-linkpresentation==11.1
+pyobjc-framework-localauthentication==11.1
+pyobjc-framework-localauthenticationembeddedui==11.1
+pyobjc-framework-mailkit==11.1
+pyobjc-framework-mapkit==11.1
+pyobjc-framework-mediaaccessibility==11.1
+pyobjc-framework-mediaextension==11.1
+pyobjc-framework-medialibrary==11.1
+pyobjc-framework-mediaplayer==11.1
+pyobjc-framework-mediatoolbox==11.1
+pyobjc-framework-metal==11.1
+pyobjc-framework-metalfx==11.1
+pyobjc-framework-metalkit==11.1
+pyobjc-framework-metalperformanceshaders==11.1
+pyobjc-framework-metalperformanceshadersgraph==11.1
+pyobjc-framework-metrickit==11.1
+pyobjc-framework-mlcompute==11.1
+pyobjc-framework-modelio==11.1
+pyobjc-framework-multipeerconnectivity==11.1
+pyobjc-framework-naturallanguage==11.1
+pyobjc-framework-netfs==11.1
+pyobjc-framework-network==11.1
+pyobjc-framework-networkextension==11.1
+pyobjc-framework-notificationcenter==11.1
+pyobjc-framework-opendirectory==11.1
+pyobjc-framework-osakit==11.1
+pyobjc-framework-oslog==11.1
+pyobjc-framework-passkit==11.1
+pyobjc-framework-pencilkit==11.1
+pyobjc-framework-phase==11.1
+pyobjc-framework-photos==11.1
+pyobjc-framework-photosui==11.1
+pyobjc-framework-preferencepanes==11.1
+pyobjc-framework-pushkit==11.1
+pyobjc-framework-quartz==11.1
+pyobjc-framework-quicklookthumbnailing==11.1
+pyobjc-framework-replaykit==11.1
+pyobjc-framework-safariservices==11.1
+pyobjc-framework-safetykit==11.1
+pyobjc-framework-scenekit==11.1
+pyobjc-framework-screencapturekit==11.1
+pyobjc-framework-screensaver==11.1
+pyobjc-framework-screentime==11.1
+pyobjc-framework-scriptingbridge==11.1
+pyobjc-framework-searchkit==11.1
+pyobjc-framework-security==11.1
+pyobjc-framework-securityfoundation==11.1
+pyobjc-framework-securityinterface==11.1
+pyobjc-framework-sensitivecontentanalysis==11.1
+pyobjc-framework-servicemanagement==11.1
+pyobjc-framework-sharedwithyou==11.1
+pyobjc-framework-sharedwithyoucore==11.1
+pyobjc-framework-shazamkit==11.1
+pyobjc-framework-social==11.1
+pyobjc-framework-soundanalysis==11.1
+pyobjc-framework-speech==11.1
+pyobjc-framework-spritekit==11.1
+pyobjc-framework-storekit==11.1
+pyobjc-framework-symbols==11.1
+pyobjc-framework-syncservices==11.1
+pyobjc-framework-systemconfiguration==11.1
+pyobjc-framework-systemextensions==11.1
+pyobjc-framework-threadnetwork==11.1
+pyobjc-framework-uniformtypeidentifiers==11.1
+pyobjc-framework-usernotifications==11.1
+pyobjc-framework-usernotificationsui==11.1
+pyobjc-framework-videosubscriberaccount==11.1
+pyobjc-framework-videotoolbox==11.1
+pyobjc-framework-virtualization==11.1
+pyobjc-framework-vision==11.1
+pyobjc-framework-webkit==11.1
+pyopenssl==25.0.0
+pyotp==2.9.0
+pyparsing==3.2.3
+pyperclip==1.9.0
+pyrect==0.2.0
+pyscreeze==1.0.1
+pysocks==1.7.1
+pytesseract==0.3.13
+pytest==8.4.1
+pytest-html==4.0.2
+pytest-metadata==3.1.1
+pytest-ordering==0.6
+pytest-rerunfailures==15.1
+pytest-xdist==3.8.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+pytorch-lightning==2.5.2
+pytweening==1.2.0
+pytz==2025.2
+pyyaml==6.0.2
+rapidocr==3.3.0
+requests==2.32.4
+rich==14.0.0
+ruamel-yaml==0.18.10
+ruamel-yaml-clib==0.2.12
+rubicon-objc==0.5.1
+sbvirtualdisplay==1.4.0
+scipy==1.16.1
+seaborn==0.13.2
+selenium==4.34.2
+seleniumbase==4.40.6
+sentry-sdk==2.33.2
+service-identity==24.2.0
+setuptools==80.9.0
+shapely==2.1.1
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.7
+sympy==1.14.0
+tabcompleter==1.4.0
+torch==2.7.1
+torchmetrics==1.8.0
+torchvision==0.22.1
+tornado==6.5
+tqdm==4.67.1
+trio==0.30.0
+trio-websocket==0.12.2
+typing-extensions==4.14.0
+typing-inspection==0.4.1
+tzdata==2025.2
+ultralytics==8.3.170
+ultralytics-thop==2.0.14
+unidecode==1.4.0
+urllib3==2.5.0
+urwid==2.6.16
+wandb==0.21.0
+wcwidth==0.2.13
+websocket-client==1.8.0
+websockets==15.0.1
+werkzeug==3.1.3
+wheel==0.45.1
+wsproto==1.2.0
+yarl==1.20.1
+zstandard==0.23.0
